--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,6 +13,7 @@
     img {
       width: 70%;
       object-fit: contain;
+      animation: fall 1s ease-out;
     }
   }
 
@@ -28,6 +29,7 @@
       color: red;
       font-weight: bolder;
       height: 40px;
+      animation: slideInFromLeft 1s ease-out;
     }
 
     p {
@@ -35,11 +37,13 @@
         "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
       font-weight: 500;
       text-align: center;
+      animation: slideInFromLeft 1s ease-out;
     }
 
     img{
         max-width: 100px;
         filter: drop-shadow(0px 0px 15px yellow);
+        animation: slideInFromLeft 1s ease-out;
 
     }
   }
@@ -64,11 +68,15 @@
       justify-content: center;
       padding: 20px;
 
+      
+
       img{
           max-width: 40px;
           margin: 10px;
-          filter: drop-shadow(0px 0px 10px red);
+          
       }
+
+      
   
       input {
         height: 30px;
@@ -236,3 +244,24 @@
   color: red;
 }
 
+@keyframes fall {
+  from {
+      transform: translateY(-100vh); /* Empieza fuera del viewport, por arriba */
+      opacity: 0; /* Empieza invisible */
+  }
+  to {
+      transform: translateY(0); /* Termina en la posición final */
+      opacity: 1; /* Termina visible */
+  }
+}
+
+@keyframes slideInFromLeft {
+  from {
+      transform: translateX(-100vw); /* Empieza fuera del viewport, por la izquierda */
+      opacity: 0; /* Empieza invisible */
+  }
+  to {
+      transform: translateX(0); /* Termina en la posición final */
+      opacity: 1; /* Termina visible */
+  }
+}
