--- a/src/pages/PokeHome.css
+++ b/src/pages/PokeHome.css
@@ -29,7 +29,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("./pokeball3.gif");
+    background: url("/pokeball3.gif");
     background-size: cover;
     background-repeat: no-repeat;
     opacity: 0.9;
