--- a/src/pages/PokeCard.css
+++ b/src/pages/PokeCard.css
@@ -2,8 +2,12 @@
     display: flex;
     flex-direction: column;
     width: 30vw;
-    margin: 5vw;
     align-items: center;
+    justify-content: space-around;
+    border: gray 2px solid;
+    padding: 10px;
+    margin: 10px;
+    min-height: 600px;
 
     p {
         padding: 10px;
@@ -29,18 +33,42 @@
         text-align: center;
         text-transform: capitalize;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        .types-poke{
+            display: flex;
+            gap: 30px;
+        }
     }
 
     .card-info-details {
         display: grid;
         grid-template-columns: 1fr 1fr;
         flex-wrap: wrap;
-        gap: 10px;
+       padding: 10px;
+       text-align: center;
+       justify-content: center;
+       align-items: center;
+       gap: 10px;
 
 
-        span {
-            padding: 10px;
+        .stat-num {
+            display: flex;
+            flex-direction: column;
             text-align: center;
+            gap: 10px;
+            
+            span{
+              text-transform: capitalize;
+              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+
+            .span-title {
+                font-weight: 600;
+            }
         }
     }
 
@@ -74,8 +102,57 @@
 }
 
 
-@media(width < 400px) {
+@media(width < 560px) {
     .card-container-inside{
-        width: 80vw;
+        width: 70vw;
     }
 }
+
+@media(width >799px ) {
+    .card-container-inside{
+        width: 20vw
+    }
+}
+
+.pokeball-loader {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: linear-gradient(to bottom, #fff 50%, #f00 50%);
+    position: relative;
+    animation: spin 1s linear infinite;
+    box-shadow: inset -2px 0 0 2px black;
+  }
+  
+  .pokeball-loader::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 4px;
+    background: black;
+    transform: translateY(-50%);
+  }
+  
+  .pokeball-loader::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: #fff;
+    border: 4px solid black;
+    transform: translate(-50%, -50%);
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
