--- a/src/pages/PokeInfo.css
+++ b/src/pages/PokeInfo.css
@@ -171,4 +171,47 @@
       }
     }
   }
+
+  .pokeball-loader {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: linear-gradient(to bottom, #fff 50%, #f00 50%);
+    position: relative;
+    animation: spin 1s linear infinite;
+    box-shadow: inset -2px 0 0 2px black;
+  }
+  
+  .pokeball-loader::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 4px;
+    background: black;
+    transform: translateY(-50%);
+  }
+  
+  .pokeball-loader::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: #fff;
+    border: 4px solid black;
+    transform: translate(-50%, -50%);
+  }
+  @keyframes spin {
+    0% {
+        transform: rotate(0deg); /* Comienza en 0 grados */
+    }
+    100% {
+        transform: rotate(360deg); /* Gira hasta 360 grados */
+    }
+  }
 }
+
