--- a/src/pages/Pokedex.css
+++ b/src/pages/Pokedex.css
@@ -91,7 +91,7 @@
       border: none;
       box-shadow: 0px 1px 5px gray;
       padding: 8px;
-      width: 30vw;
+      width: 25vw;
     }
 
     button {
@@ -115,10 +115,8 @@
 .info-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 5vw;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  height: 70vh;
 }
 
 @media(width < 400px) {
