--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -197,7 +197,7 @@
   animation: shake 0.5s ease-in-out 2;
 }
 
-.pokeball-loader {
+.pokeball-loader1 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -207,7 +207,7 @@
   box-shadow: inset -2px 0 0 2px black;
 }
 
-.pokeball-loader::before {
+.pokeball-loader1::before {
   content: '';
   position: absolute;
   top: 50%;
@@ -218,7 +218,7 @@
   transform: translateY(-50%);
 }
 
-.pokeball-loader::after {
+.pokeball-loader1::after {
   content: '';
   position: absolute;
   top: 50%;
